<resources>
    <string name="app_name">StationGX</string>
    <string name="common_ok">OK</string>
    <string name="common_yes">YES</string>
    <string name="common_no">NO</string>
    <string name="common_confirm">CONFIRM</string>
    <string name="common_cancel">CANCEL</string>
    <string name="common_warning">WARNING</string>
    <string name="common_error">ERROR</string>
    <string name="common_tip">TIP</string>
    <string name="health_data">Health Data</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="profile">Profile</string>
    <string name="tele_health">Tele Health</string>
    <string name="manual_input">Manual Input</string>
    <string name="medication">Medication</string>
    <string name="measurement">Measurement</string>
    <string name="music">Music</string>
    <string name="settings">Setting</string>
    <string name="time">Time</string>
    <string name="note">Note</string>
    <string name="status">Status</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="last_document_at">Last document at </string>
    <string name="save">Save</string>
    <string name="common_alert">ALERT</string>
    <string name="welcome_text">Hi Mary,\nHere is your health flower!</string>
    <string name="bundle_between_activities">ActivityBundle</string>
    <string name="fragment_indicator">FragmentIndicator</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="no_data">no data</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="weight">Weight</string>
    <string name="temperature">Temperature</string>
    <string name="oxygenation">Oxygenation</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="spirometer">Spirometer</string>
    <string name="others">Others</string>
    <string name="eistein_quotes">\"I have no special talent.\nI am only passionately curious.\"</string>
    <string name="eistein">Albert Eistein</string>
    <string name="start_input">Start Input</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">/ Diastolic</string>
    <string name="mmhg">mmHg</string>
    <string name="target_systolic">Target Systolic</string>
    <string name="date_time">Date/ Time</string>
    <string name="sp">SP</string>
    <string name="dp">DP</string>
    <string name="individual_sp_range">Individual SP Range</string>
    <string name="individual_dp_range">Individual DP Range</string>
    <string name="systolic_diastolic">Systolic / Diastolic</string>
    <string name="manual_input_invalid_blood_pressure">wrong blood pressure value, please enter again.</string>
    <string name="manual_input_outofrange_blood_pressure">blood pressure value NOT in normal range, confirm to save this record?</string>
    <string name="normal_bmi_range">Normal BMI Range</string>
    <string name="target_weight">Target Weight:</string>
    <string name="height">Height:</string>
    <string name="changes">Changes</string>
    <string name="target">Target</string>
    <string name="bmi">BMI</string>
    <string name="signin_hello_wording">Hello, Friend</string>
    <string name="signin_welcome_wording">Please enter your personal info and start a jounery with us.</string>
    <string name="signin_btn_signin_wording">SIGN IN</string>
    <string name="signin_btn_signup_wording">SIGN UP</string>
    <string name="signin_title_wording">Sign Into Corbit</string>
    <string name="signin_using_email_wording">Or use your e-mail account</string>
    <string name="signin_email_hint_wording">Your e-mail</string>
    <string name="signin_pwd_hint_wording">Password</string>
    <string name="signin_forgot_pwd_wording">Forgot your password?</string>
    <string name="signin_wrong_email_or_pwd_wording">Wrong Password or e-mail. Try again or click Forgot password to reset it.</string>
    <string name="signin_empty_email_hint_wording">Empty e-mail</string>
    <string name="signin_wrong_email_format_wording">Wrong e-mail format</string>
    <string name="signin_resend_pwd_title">Resend password</string>
    <string name="signin_resend_pwd_message_1">We send a letter to:</string>
    <string name="signin_resend_pwd_message_2">Please check your e-mail, and reset your password.</string>
    <string name="signin_resend_pwd_message">We send a letter to:\n <font color='#0288D1'>xxx</font>%1s\nPlease check your e-mail, and reset your password.</string>
    <string name="signup_hello_wording">Welcome Back</string>
    <string name="signup_welcome_wording">To keep connected with us please login your personal info</string>
    <string name="signup_btn_signin_wording">SIGN IN</string>
    <string name="signup_btn_signup_wording">SIGN UP</string>
    <string name="signup_create_account_wording">Create an account</string>
    <string name="signup_using_email_wording">Or use your e-mail to registration</string>
    <string name="signup_first_name_hint_wording">First name</string>
    <string name="signup_last_name_hint_wording">Last name</string>
    <string name="signup_email_hint_wording">Your e-mail</string>
    <string name="signup_pwd_hint_wording">Password</string>
    <string name="signup_check_email_wording">Check email</string>
    <string name="signup_empty_email_hint_wording">Empty e-mail</string>
    <string name="signup_empty_pwd_hint_wording">Empty password</string>
    <string name="signup_wrong_email_format_wording">Wrong e-mail format</string>
    <string name="signup_wrong_pwd_format_wording">The password must be at least 6 characters long and may include numbers, letters but not spaces. </string>
    <string name="signup_pwd_verify_wording">Verify the password here</string>
    <string name="profile_title_wording">My Profile</string>
    <string name="profile_label_name_wording"><font fgcolor='#070707'>First Name</font> <font fgcolor='#0288d1'>*</font></string>
    <string name="profile_name_hint_wording">Name</string>
    <string name="profile_label_last_name_wording">Last Name <font fgcolor='#0288d1'>*</font></string>
    <string name="profile_last_name_hint_wording">Last Name</string>
    <string name="profile_label_email_account_wording">Email-account <font fgcolor='#0288d1'>*</font></string>
    <string name="profile_email_account_hint_wording">e.g. someone123@gmail.com</string>
    <string name="profile_label_phone_wording">Phone</string>
    <string name="profile_phone_hint_wording">0511-423-459</string>
    <string name="profile_label_city_wording">City</string>
    <string name="profile_city_hint_wording"></string>
    <string name="profile_label_country_wording">Country</string>
    <string name="profile_country_hint_wording"></string>
    <string name="profile_label_gender_wording">Gender</string>
    <string name="profile_gender_hint_wording"></string>
    <string name="profile_label_birthday_wording">Birthday</string>
    <string name="profile_birthday_hint_wording">mm/dd/yyyy</string>
    <string name="profile_label_age_wording">Age</string>
    <string name="profile_label_height_wording">Height</string>
    <string name="profile_label_cm_wording">cm</string>
    <string name="profile_label_weight_wording">Weight</string>
    <string name="profile_label_kg_wording">kg</string>
    <string name="profile_label_bmi_wording">BMI</string>
    <string name="profile_label_blood_type_wording">Blood Type</string>
    <string name="profile_label_rhesus_wording">Rhesus</string>
    <string name="profile_label_allergies_wording">Allergies</string>
    <string name="profile_label_food_allergies_wording">Food Allergies</string>
    <string name="profile_food_allergies_hint_wording">Taro, peanuts</string>
    <string name="profile_label_drug_intolerance_wording">Drug Intolerance</string>
    <string name="profile_drug_intolerance_hint_wording">pyrin, allopurinol</string>
    <string name="profile_label_mobility_wording">How is your mobility?</string>
    <string name="profile_label_mobility_mostly_in_bed_wording">Mostly in bed</string>
    <string name="profile_label_mobility_wheelchairs_wording">Wheelchairs</string>
    <string name="profile_label_mobility_walking_aid_wording">Walking aid</string>
    <string name="profile_label_mobility_some_support_wording">Some support</string>
    <string name="profile_label_mobility_independent_wording">Independent</string>
    <string name="profile_label_lying_in_bed_wording">lying in bed</string>
    <string name="profile_label_lying_independently_wording">lying independently</string>
    <string name="profile_label_vision_wording">How is your vision?</string>
    <string name="profile_label_vision_good_wording">Good</string>
    <string name="profile_label_vision_cataract_wording">Cataract</string>
    <string name="profile_label_vision_myopia_wording">Myopia</string>
    <string name="profile_label_vision_presbyopia_wording">Presbyopia</string>
    <string name="profile_label_hearing_wording">How is your hearing?</string>
    <string name="profile_label_hearing_good_wording">Good</string>
    <string name="profile_label_hearing_moderate_wording">Moderate</string>
    <string name="profile_label_hearing_need_hearing_aid_wording">Need hearing aid</string>
    <string name="profile_label_medical_event_experience_wording">Medical event experience? (select)</string>
    <string name="profile_label_heart_attack_wording">Heart Attack</string>
    <string name="profile_label_stroke_wording">Stroke</string>
    <string name="profile_label_bleeding_wording">Bleedings</string>
    <string name="profile_label_cancer_wording">Cancer</string>
    <string name="profile_label_faint_or_fall_wording">Faint of Fall</string>
    <string name="profile_label_dialysis_wording">Dialysis</string>
    <string name="profile_label_surgery_wording">Surgery</string>
    <string name="profile_label_others_wording">Others</string>
    <string name="profile_search_event_hint_wording">Search Event, e.g. heart disease.</string>
    <string name="profile_label_emergency_contact_wording">Emergency Contact</string>
    <string name="profile_label_emergency_contact_name_wording"><font fgcolor='#070707'>Name</font> <font fgcolor='#0288d1'>*</font></string>
    <string name="profile_label_emergency_contact_last_name_wording"><font fgcolor='#070707'>Last Name</font> <font fgcolor='#0288d1'>*</font></string>
    <string name="profile_label_emergency_contact_relation_wording">Relation</string>
    <string name="profile_label_emergency_contact_phone_wording"><font fgcolor='#070707'>Phone</font> <font fgcolor='#0288d1'>*</font></string>
    <string name="profile_label_emergency_contact_email_wording"><font fgcolor='#070707'>Email</font> <font fgcolor='#0288d1'>*</font></string>
    <string name="profile_label_graphic_wording">Please check, which of the following organ systems need attention or was under medical treatment?</string>
    <string name="profile_label_graphic_nerves_wording">Nerves, Brain and Mental</string>
    <string name="profile_label_graphic_heart_wording">Heart and Circulation</string>
    <string name="profile_label_graphic_kidney_wording">Kidney and Urogenital</string>
    <string name="profile_label_graphic_endocrine_wording">Endocrine/Blood</string>
    <string name="profile_label_graphic_skin_wording">Skin, Hair, Feet and Hands</string>
    <string name="profile_label_graphic_lung_wording">Lung and Respiration</string>
    <string name="profile_label_graphic_abdominal_wording">Abdominal/Liver/Digestive</string>
    <string name="profile_label_graphic_muscular_wording">Muscular and Skeletal</string>
    <string-array name="gender_selection">
        <item>Selection:</item>
        <item>Female</item>
        <item>Male</item>
        <item>Divers</item>
    </string-array>
</resources>