<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="1280px"
    android:layout_height="48px"
    android:orientation="horizontal">
    
    <RelativeLayout
        android:layout_width="688px"
        android:layout_height="48px"
        android:layout_marginStart="296px"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="207px"
            android:layout_height="48px"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/switcher_today"
            android:text="@string/today"
            android:textSize="24px"
            android:gravity="center"
            android:background="@drawable/calendar_today"/>

        <TextView
            android:layout_width="207px"
            android:layout_height="48px"
            android:layout_alignParentTop="true"
            android:layout_marginStart="205px"
            android:id="@+id/switcher_week"
            android:text="@string/week"
            android:textSize="24px"
            android:gravity="center"
            android:background="@drawable/calendar_week"/>
        <TextView
            android:layout_width="208px"
            android:layout_height="48px"
            android:layout_alignParentTop="true"
            android:layout_marginStart="410px"
            android:id="@+id/switcher_month"
            android:text="@string/month"
            android:textSize="24px"
            android:gravity="center"
            android:background="@drawable/calendar_month"/>
        <ImageView
            android:layout_width="72px"
            android:layout_height="48px"
            android:layout_alignParentTop="true"
            android:layout_marginStart="616px"
            android:id="@+id/switcher_cancel"
            android:background="@drawable/calendar_cancel"
            android:src="@drawable/ic_baseline_clear_24_grey" />
    </RelativeLayout>

</RelativeLayout>