<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="129px"
        android:layout_height="7px"
        android:id="@+id/drawer_indicator"
        android:layout_marginTop="9px"
        android:layout_marginStart="576px"
        android:background="@color/indicator_grey"/>

    <TextView
        android:layout_width="55px"
        android:layout_height="32px"
        android:id="@+id/calendar_year"
        android:layout_marginTop="31px"
        android:layout_marginStart="600px"
        android:textSize="24px"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/word_blue"
        android:text="2020"
        android:autoSizeTextType="uniform" />
    
    <ImageView
        android:layout_width="16px"
        android:layout_height="8px"
        android:id="@+id/calendar_year_indicator"
        android:layout_marginTop="43px"
        android:layout_marginStart="662.95px"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:rotation="270"
        android:scaleType="fitXY"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/frame_grey"
        android:layout_marginTop="80px"/>

    <RelativeLayout
        android:layout_width="688px"
        android:layout_height="48px"
        android:layout_marginTop="105px"
        android:layout_marginStart="296px"
        >
        
        <TextView
            android:layout_width="207px"
            android:layout_height="48px"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/calendar_today"
            android:text="@string/today"
            android:textSize="24px"
            android:gravity="center"
            android:background="@drawable/calendar_today"/>

        <TextView
            android:layout_width="207px"
            android:layout_height="48px"
            android:layout_alignParentTop="true"
            android:layout_marginStart="205px"
            android:id="@+id/calendar_week"
            android:text="@string/week"
            android:textSize="24px"
            android:gravity="center"
            android:background="@drawable/calendar_week"/>
        <TextView
            android:layout_width="208px"
            android:layout_height="48px"
            android:layout_alignParentTop="true"
            android:layout_marginStart="410px"
            android:id="@+id/calendar_month"
            android:text="@string/month"
            android:textSize="24px"
            android:gravity="center"
            android:background="@drawable/calendar_month"/>
        <ImageView
            android:layout_width="72px"
            android:layout_height="48px"
            android:layout_alignParentTop="true"
            android:layout_marginStart="616px"
            android:id="@+id/calendar_cancel"
            android:background="@drawable/calendar_cancel"
            android:src="@drawable/ic_baseline_clear_24_grey" />


    </RelativeLayout>


</RelativeLayout>